# const-tools

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md  ci.bash
.github/workflows/: main.yml  release-plz.yml
compile_fail_tests/destructure/: struct_destructure.rs  struct_destructure.stderr  struct_duplicate_field.rs  struct_duplicate_field.stderr  struct_implements_drop.rs  struct_implements_drop.stderr  struct_refuse_ellipsis.rs  struct_refuse_ellipsis.stderr  struct_unbound_field.rs  struct_unbound_field.stderr  struct_unknown_field.rs  struct_unknown_field.stderr  tuple_arity_too_high.rs  tuple_arity_too_high.stderr  tuple_arity_too_low.rs  tuple_arity_too_low.stderr  tuple_arity_unimplemented.rs  tuple_arity_unimplemented.stderr  tuple_destructure.rs  tuple_destructure.stderr
compile_fail_tests/fold/: break_in_body.rs  break_in_body.stderr  break_in_body_unevaluated.rs  break_in_body_unevaluated.stderr
compile_fail_tests/map/: break_in_body.rs  break_in_body.stderr  break_in_body_unevaluated.rs  break_in_body_unevaluated.stderr  more_arrays_than_params.rs  more_arrays_than_params.stderr  more_params_than_arrays.rs  more_params_than_arrays.stderr
examples/: destructure_tuple.rs  wrap_all.rs
src/: __call.rs  __manually_drop_inner_ref.rs  __maybe_uninit_array_assume_init.rs  __maybe_uninit_array_uninit.rs  __same_len.rs  __zip_left.rs  destructure.rs  fold.rs  from_indices.rs  lib.rs  map.rs  scan.rs  unzip.rs  zip.rs
tests/: compile_fail_tests.rs  destructure.rs  fold.rs  from_indices.rs  map.rs  scan.rs  unzip.rs  zip.rs
tests/support/: mod.rs
(+8 files in other folders)
